--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
         <header class="hero-section d-flex align-items-center bd-bottom" data-scroll-index="0">
             <div id="particles-js"></div>
             <div class="container">
-                <div class="hero-content text-center">
-                    <h4>Hello! I'M</h4>
-                    <h1>Veton Bekteshi</h1>
-                    <h2>I'm <span class="typed"></span></h2>
+                <div class="hero-content text-center" style="color: black;">
+                    <h4 style="color: black;">Hello! I'M</h4>
+                    <h1 style="color: black;">Veton Bekteshi</h1>
+                    <h2 style="color: black;">I'm <span class="typed"></span></h2>
                 </div>
                 <ul class="hero-social">
 
-                    <li><a href="https://www.linkedin.com/in/burim-aliu-11a0ba235/"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href="https://discordapp.com/users/burim#7410"><i class="fab fa-discord"></i></a></li>
-                    <li><a href="https://next-innovationgroup.slack.com/archives/D037SLYE2N7"><i class="fab fa-slack"></i></a></li>
-                    <li><a href="https://github.com/burim-aliu"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/veton-bekteshi-85a1a5231/"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://www.behance.net/vetonbekteshi"><i class="fab fa-behance"></i></a></li>
+                    <li><a href="mailto:vetonbekteshi1@gmail.com"><i class="fas fa-envelope"></i></a></li>
+                    <li><a href="https://github.com/veton-bekteshi"><i class="fab fa-github"></i></a></li>
                 </ul>
             </div>
         </header><!-- /.hero-section -->
@@ -143,9 +143,10 @@
                                     <p>I am always glad whenever I can help do a good job for my clients. If you want to work with me, expect that you will get quality work and great effort for each design. With good communication and the skills that I have, all of the people love my art.
                                         I am focused on
                                         <ul>
-                                            <li>1. Adobe photoshop</li>
+                                            <li>1. Adobe XD</li>
                                             <li>2. Adobe Illustrator</li>
-                                            <li>3. Logo design</li>
+                                            <li>3. Adobe Photoshop</li>
+                                            <li>4. Figma</li>
                                         </ul>
                                         </p>
                                 </div>
@@ -175,16 +176,16 @@
                             </div>
                             <ul class="skill-items">
                                 <li class="skill-item">
-                                    <h5>Hardhat</h5>
+                                    <h5>Adobe XD</h5>
                                     <div class="progress">
                                         <div class="progress-bar wow slideInLeft" data-wow-delay="0ms"
-                                            data-wow-duration="2000ms" role="progressbar" style="width: 80%;">
-                                            <span>80%</span>
+                                            data-wow-duration="2000ms" role="progressbar" style="width: 90%;">
+                                            <span>90%</span>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="skill-item">
-                                    <h5>Typescript</h5>
+                                    <h5>Adobe Illustrator</h5>
                                     <div class="progress">
                                         <div class="progress-bar wow slideInLeft" data-wow-delay="200ms"
                                             data-wow-duration="2000ms" role="progressbar" style="width: 90%;">
@@ -193,20 +194,20 @@
                                     </div>
                                 </li>
                                 <li class="skill-item">
-                                    <h5>Anchor</h5>
+                                    <h5>Adobe Photoshop</h5>
                                     <div class="progress">
                                         <div class="progress-bar wow slideInLeft" data-wow-delay="300ms"
-                                            data-wow-duration="2000ms" role="progressbar" style="width: 75%;">
-                                            <span>75%</span>
+                                            data-wow-duration="2000ms" role="progressbar" style="width: 85%;">
+                                            <span>85%</span>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="skill-item">
-                                    <h5>Rust</h5>
+                                    <h5>Figma</h5>
                                     <div class="progress">
                                         <div class="progress-bar wow slideInLeft" data-wow-delay="400ms"
-                                            data-wow-duration="2000ms" role="progressbar" style="width: 65%;">
-                                            <span>65%</span>
+                                            data-wow-duration="2000ms" role="progressbar" style="width: 80%;">
+                                            <span>80%</span>
                                         </div>
                                     </div>
                                 </li>
@@ -227,7 +228,7 @@
                     <div class="col-md-4 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="200ms"
                         data-wow-duration="1000ms">
                         <div class="services-item">
-                            <i class="icon-genius"></i>
+                            <i class="icon-laptop"></i>
                             <h3>Web Designer</h3>
                             <p>I have designed and developed many websites. I have designed with Adobe XD and then developed it.</p>
                             <div class="dots"></div>
@@ -271,27 +272,70 @@
                     <div class="row portfolio-items">
                         <div class="col-md-4 col-sm-6 padding-10 single-item graphic">
                             <div class="portfolio-box">
-                                <img src="img/port-1.jfif" alt="img">
+                                <img src="img/broshura.png" alt="img">
                                 <div class="portfolio-content">
-                                    <h3><a class="img-popup" href="img/port-1.jfif">Burnt Finance<span>SOLANA NFT</span></a>
+                                    <h3><a class="img-popup" href="img/broshura.png">Travel Brochure Design<span>Brochure</span></a>
                                     </h3>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6 padding-10 single-item graphic">
                             <div class="portfolio-box">
-                                <img src="img/port-3.jfif" alt="img">
+                                <img src="img/chips.png" alt="img">
                                 <div class="portfolio-content">
-                                    <h3><a class="img-popup" href="img/port-3.jfif">EGOZE<span>GameFi</span></a></h3>
+                                    <h3><a class="img-popup" href="img/chips.png">Package Design LAYS<span>Package</span></a>
+                                    </h3>
                                 </div>
                             </div>
                         </div>
+                        <div class="col-md-4 col-sm-6 padding-10 single-item graphic">
+                            <div class="portfolio-box">
+                                <img src="img/artboard.png" alt="img">
+                                <div class="portfolio-content">
+                                    <h3><a class="img-popup" href="img/artboard.png">HIPPO Business Card Design<span>Businnes Card</span></a></h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6 padding-10 single-item graphic">
+                            <div class="portfolio-box">
+                                <img src="img/artboard2.png" alt="img">
+                                <div class="portfolio-content">
+                                    <h3><a class="img-popup" href="img/artboard2.png">HIPPO Logo Design<span>Logo Design</span></a>
+                                    </h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6 padding-10 single-item graphic">
+                            <div class="portfolio-box">
+                        <div class="video-container">
+                            <video autoplay muted loop>
+                                <source src="img/nike.mp4" type="video/mp4" />
+                            </video>
+                        </div>
+                            <div class="portfolio-content">
+                                <h3><a href="img/nike.mp4">Video Animation Nike<span>Animation</span></a>
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 padding-10 single-item graphic">
+                        <div class="portfolio-box">
+                    <div class="video-container">
+                        <video autoplay muted loop>
+                            <source src="img/popkek.mp4" type="video/mp4" />
+                        </video>
+                    </div>
+                        <div class="portfolio-content">
+                            <h3><a href="img/popkek.mp4">Video Animation Popkek<span>Animation</span></a>
+                            </h3>
+                        </div>
+                    </div>
+                </div>
                         <div class="col-md-4 col-sm-6 padding-10 single-item uiux">
                             <div class="portfolio-box">
                                 <img src="img/port-1.png" alt="img">
                                 <div class="portfolio-content">
-                                    <h3><a class="img-popup" href="img/port-1.png">Altered State Machine<span>SOLANA
-                                                NFT</span></a></h3>
+                                    <h3><a class="img-popup" href="img/port-1.png">ON Travel-Design, Mobile APP<span>UI / UX</span></a></h3>
                                 </div>
                             </div>
                         </div>
@@ -299,8 +343,7 @@
                             <div class="portfolio-box">
                                 <img src="img/port-2.png" alt="img">
                                 <div class="portfolio-content">
-                                    <h3><a class="img-popup" href="img/port-2.png">Altered State Machine<span>SOLANA
-                                                NFT</span></a></h3>
+                                    <h3><a class="img-popup" href="img/port-2.png">Finance Web Design<span>UI / UX</span></a></h3>
                                 </div>
                             </div>
                         </div>
@@ -308,8 +351,7 @@
                             <div class="portfolio-box">
                                 <img src="img/port-3.png" alt="img">
                                 <div class="portfolio-content">
-                                    <h3><a class="img-popup" href="img/port-3.png">Altered State Machine<span>SOLANA
-                                                NFT</span></a></h3>
+                                    <h3><a class="img-popup" href="img/port-3.png">Hippo - Baby Shop Landing Page<span>UI / UX</span></a></h3>
                                 </div>
                             </div>
                         </div>
@@ -317,8 +359,7 @@
                             <div class="portfolio-box">
                                 <img src="img/port-4.png" alt="img">
                                 <div class="portfolio-content">
-                                    <h3><a class="img-popup" href="img/port-4.png">Altered State Machine<span>SOLANA
-                                                NFT</span></a></h3>
+                                    <h3><a class="img-popup" href="img/port-4.png">Crypto App Design<span>UI / UX</span></a></h3>
                                 </div>
                             </div>
                         </div>
@@ -326,8 +367,7 @@
                             <div class="portfolio-box">
                                 <img src="img/port-5.png" alt="img">
                                 <div class="portfolio-content">
-                                    <h3><a class="img-popup" href="img/port-5.png">Altered State Machine<span>SOLANA
-                                                NFT</span></a></h3>
+                                    <h3><a class="img-popup" href="img/port-5.png">Mobile Music App Design<span>UI / UX</span></a></h3>
                                 </div>
                             </div>
                         </div>
@@ -440,10 +480,10 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="footer-social text-right">
-                            <a href="https://www.linkedin.com/in/veton-bekteshi-85a1a5231/"><i class="fab fa-linkedin"></i></a>
-                            <a href="https://discordapp.com/users/burim#7410"><i class="fab fa-discord"></i></a>
-                            <a href="https://next-innovationgroup.slack.com/archives/D037SLYE2N7"><i class="fab fa-slack"></i></a>
-                            <a href="https://github.com/burim-aliu"><i class="fab fa-github"></i></a>
+                            <li><a href="https://www.linkedin.com/in/veton-bekteshi-85a1a5231/"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://www.behance.net/vetonbekteshi"><i class="fab fa-behance"></i></a></li>
+                    <li><a href="mailto:vetonbekteshi1@gmail.com"><i class="fas fa-envelope"></i></a></li>
+                    <li><a href="https://github.com/veton-bekteshi"><i class="fab fa-github"></i></a></li>
                         </div><!-- /.footer-social -->
                     </div>
                 </div>
@@ -469,7 +509,7 @@
     <script src="js/vendor/app.js"></script>
     <script src="js/contact.js"></script>
     <script src="js/main.js"></script>
-
+    <script src="js/jquery.min.js"></script>
 </body>
 
 </html>
